deployments/monitor/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitor
spec:
  type: NodePort
  selector:
    app: monitor
  ports:
  - port: 8000
